--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,72 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>ALPHA TRADE ACADEMY</title>
+  <title>الصفحة الرئيسية - ALPHA TRADE ACADEMY</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background: #111;
-      color: gold;
+      margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #1e1b2e, #2d1a4c);
+      color: #fff;
       text-align: center;
-      padding: 50px;
+      padding: 60px 20px;
     }
+
     h1 {
-      font-size: 2.5em;
+      font-size: 3em;
+      color: #bb86fc;
+      margin-bottom: 10px;
     }
+
     p {
       font-size: 1.2em;
+      color: #e0e0e0;
       margin-bottom: 40px;
+      line-height: 1.8;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
-    a {
+
+    .start-btn {
       display: inline-block;
-      padding: 12px 24px;
-      background: gold;
-      color: black;
+      background: #bb86fc;
+      color: #1e1b2e;
+      padding: 14px 28px;
       text-decoration: none;
+      font-size: 1.1em;
       font-weight: bold;
       border-radius: 8px;
+      transition: background 0.3s ease;
     }
-    a:hover {
-      background: #ffc107;
+
+    .start-btn:hover {
+      background: #d6a2ff;
+    }
+
+    footer {
+      margin-top: 60px;
+      color: #888;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
-  <h1>🎓 منصة ALPHA TRADE ACADEMY</h1>
-  <p>تحليل تلقائي لسعر الذهب والبيتكوين وإشارات احترافية مباشرة على تليغرام</p>
-  <a href="/admin-users.html">دخول لوحة الإدارة</a>
+
+  <h1>🎓 ALPHA TRADE ACADEMY</h1>
+  <p>
+    مرحبًا بك في منصتنا التعليمية الشاملة!<br>
+    تقدم لك ALPHA TRADE ACADEMY أدوات قوية للتحليل الفني،
+    إشارات تداول مباشرة للذهب والبيتكوين، ودروس احترافية مصممة خصيصًا لكل من يريد احتراف عالم التداول.
+  </p>
+
+  <a class="start-btn" href="/login.html">🚀 ابدأ الآن</a>
+
+  <footer>
+    &copy; 2025 - جميع الحقوق محفوظة لـ ALPHA TRADE ACADEMY
+  </footer>
+
 </body>
 </html>
